Do not insert 3 empty lines on top of reply (HTML composition, no paragraph mode)
Categories
(Thunderbird :: Message Compose Window, defect)
Tracking
(thunderbird_esr115 unaffected, thunderbird_esr128? fixed, thunderbird134 affected)
Tracking | Status | |
---|---|---|
thunderbird_esr115 | --- | unaffected |
thunderbird_esr128 | ? | fixed |
thunderbird134 | --- | affected |
People
(Reporter: mozilla, Assigned: welpy-cw)
References
(Blocks 1 open bug, Regression)
Details
(Keywords: regression)
Attachments
(1 file)
48 bytes,
text/x-phabricator-request
|
corey
:
approval-comm-esr128+
|
Details | Review |
User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:128.0) Gecko/20100101 Firefox/128.0
Steps to reproduce:
- Click on a mail
- Press button reply
Actual results:
Compose Window opens to prepare my reply, but with 3 empty lines inserted at top.
Expected results:
No lines should be inserted at top
I noticed that there is a setting in Composition&Addressing->When quoting=start my replay below the quote.
This makes the 3 lines go away, but places the cursor at the end, which is not so practical, as I have the habit of moving the cursor down line by line while reading/replying to the message.
It would be nice to have a setting which
- does not insert 3 empty lines at top
- leaves the cursor at the beginning
Comment 1•1 month ago
|
||
Sorry I don't think we want to change this. Like it or not, people generally reply on top, and they need somewhere to "land".
Reporter | ||
Comment 2•1 month ago
|
||
Why not simply offer an additional option?
In HTML + paragraph more, exactly one empty paragraph is placed on top. In plaintext mode, two empty lines are placed in top, you start in the first line, the second line separates from the quote. In HTML + body text mode (no paragraph) mode there are indeed three empty lines which seems excessive, it should be two, like in plaintext mode.
Looks like the first of these three lines was a stopgap and may need to be removed:
https://searchfox.org/comm-central/rev/b88214a157a251033033a144900430d1fee188ad/mailnews/compose/src/nsMsgCompose.cpp#509,526-527
Assignee | ||
Comment 5•1 month ago
|
||
Regression window is https://hg.mozilla.org/comm-central/pushloghtml?fromchange=13c7f8f0760eba12b1ee5dd9e4fe31b82642e95c&tochange=1709bda65a56ef7fbca917384e85667f60dc0503
The corresponding mozilla-central window contains bug 1849763 which is likely the regressor.
Assignee | ||
Comment 6•1 month ago
|
||
Updated•1 month ago
|
Assignee | ||
Updated•1 month ago
|
Pushed by vineet@thunderbird.net:
https://hg.mozilla.org/comm-central/rev/a4a704faa406
Remove ancient stopgap fix that now creates unwanted 3rd line for reply on top. r=mkmelin
Assignee | ||
Comment 8•7 days ago
|
||
Comment on attachment 9442671 [details]
Bug 1935938 - Remove ancient stopgap fix that now creates unwanted 3rd line for reply on top. r=mkmelin
[Approval Request Comment]
User impact if declined: user has to delete unnecessary empty lines
Risk to taking this patch (and alternatives if risky): none
Comment 9•5 days ago
|
||
Comment on attachment 9442671 [details]
Bug 1935938 - Remove ancient stopgap fix that now creates unwanted 3rd line for reply on top. r=mkmelin
[Triage Comment]
Approved for esr128
Comment 10•1 hour ago
|
||
bugherder uplift |
Thunderbird 128.6.1esr:
https://hg.mozilla.org/releases/comm-esr128/rev/06b47c7af9e9
Description
•