Bug 1935938 - Remove ancient stopgap fix that now creates unwanted 3rd line for reply on top. r=mkmelin

Based on https://github.com/Betterbird/thunderbird-patches/blob/main/128/bugs/1935938-fix-3rd-line.patch

Differential Revision: https://phabricator.services.mozilla.com/D231680

--HG--
extra : moz-landing-system : lando